reverting gradlew changes that got committed